Closed Bug 902528 Opened 13 years ago Closed 13 years ago

crash in mozilla::layers::CompositorD3D11::BeginFrame

Categories

(Core :: Graphics: Layers, defect)

25 Branch
x86
Windows 8
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla26
Tracking Status
firefox24 --- unaffected
firefox25 --- affected
firefox26 --- verified

People

(Reporter: scoobidiver, Assigned: nrc)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

It first showed up in 26.0a1/20130806 and 25.0a2/20130806. The regression range is: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=482b9d04974a&tochange=ad0ae007aa9e It's likely a regression from bug 874721/bug 899435. Signature mozilla::layers::CompositorD3D11::BeginFrame(mozilla::gfx::RectTyped<mozilla::gfx::UnknownUnits> const*, gfxMatrix const&, mozilla::gfx::RectTyped<mozilla::gfx::UnknownUnits> const&, mozilla::gfx::RectTyped<mozilla::gfx::UnknownUnits>*, mozilla::gfx::R... More Reports Search UUID 28028500-9873-4daf-abf3-ebb0d2130806 Date Processed 2013-08-06 19:52:20.490598 Uptime 283 Last Crash 1190118 seconds before submission Install Age 334 since version was first installed. Install Time 2013-08-06 19:47:24 Product Firefox Version 26.0a1 Build ID 20130806030203 Release Channel nightly OS Windows NT OS Version 6.2.9200 Build Architecture x86 Build Architecture Info GenuineIntel family 6 model 60 stepping 3 | 4 Crash Reason EXCEPTION_ACCESS_VIOLATION_READ Crash Address 0x20 App Notes AdapterVendorID: 0x10de, AdapterDeviceID: 0x0fc6, AdapterSubsysID: 00000000, AdapterDriverVersion: 9.18.13.2641 D2D? D2D+ DWrite? DWrite+ D3D10 Layers? D3D10 Layers+ Frame Module Signature Source 0 xul.dll mozilla::layers::CompositorD3D11::BeginFrame(mozilla::gfx::RectTyped<mozilla::gfx::UnknownUnits> const *,gfxMatrix const &,mozilla::gfx::RectTyped<mozilla::gfx::UnknownUnits> const &,mozilla::gfx::RectTyped<mozilla::gfx::UnknownUnits> *,mozilla::gfx::RectTyped<mozilla::gfx::UnknownUnits> *) gfx/layers/d3d11/CompositorD3D11.cpp 1 xul.dll mozilla::layers::LayerManagerComposite::Render() gfx/layers/composite/LayerManagerComposite.cpp 2 xul.dll mozilla::layers::LayerManagerComposite::EndTransaction(void (*)(mozilla::layers::ThebesLayer *,gfxContext *,nsIntRegion const &,nsIntRegion const &,void *),void *,mozilla::layers::LayerManager::EndTransactionFlags) gfx/layers/composite/LayerManagerComposite.cpp 3 xul.dll mozilla::layers::CompositorParent::Composite() gfx/layers/ipc/CompositorParent.cpp 4 xul.dll MessageLoop::RunTask(Task *) ipc/chromium/src/base/message_loop.cc 5 xul.dll MessageLoop::DoWork() ipc/chromium/src/base/message_loop.cc More reports at: https://crash-stats.mozilla.com/report/list?product=Firefox&signature=mozilla%3A%3Alayers%3A%3ACompositorD3D11%3A%3ABeginFrame%28mozilla%3A%3Agfx%3A%3ARectTyped%3Cmozilla%3A%3Agfx%3A%3AUnknownUnits%3E+const*%2C+gfxMatrix+const%26%2C+mozilla%3A%3Agfx%3A%3ARectTyped%3Cmozilla%3A%3Agfx%3A%3AUnknownUnits%3E+const%26%2C+mozilla%3A%3Agfx%3A%3ARectTyped%3Cmozilla%3A%3Agfx%3A%3AUnknownUnits%3E*%2C+mozilla%3A%3Agfx%3A%3AR%2E%2E%2E
Assignee: nobody → ncameron
Attachment #787251 - Flags: review?(bas)
BTW I am kind of amazed people are actually using d3d11 OMTC.
Comment on attachment 787251 [details] [diff] [review] check render target in BeginFrame Review of attachment 787251 [details] [diff] [review]: ----------------------------------------------------------------- I'm curious -why- the GetBuffer is failing, but for now let's pretend it's not concerning :P.
Attachment #787251 - Flags: review?(bas) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: