Bug 902528. Check we still have a render target in BeginFrame. r=Bas